added Index term

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -96,6 +96,8 @@ denis.trystram@imag.fr}
 }
 \begin{document}
 
+\IEEEtitleabstractindextext{D.4.7.f Parallel Systems, D.4.1.e Scheduling, 1.2.6 Learning}
+
 \begin{abstract}
 
   The EASY-FCFS heuristic is the basic building block of job scheduling
