--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1348,4 +1348,23 @@ the French program Investissement d'avenir.
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
 
+\begin{IEEEbiographynophoto}{Eric Gaussier}
+Biography text here.
+\end{IEEEbiographynophoto}
+
+\begin{IEEEbiographynophoto}{J\'er\^ome Lelong}
+Biography text here.
+\end{IEEEbiographynophoto}
+
+
+\begin{IEEEbiographynophoto}{Valentin Reis}
+Valentin is a PhD candidate at Inria/University Grenoble Alpes, France.
+He is broadly interested in machine learning and functionnal programming.
+\end{IEEEbiographynophoto}
+
+
+\begin{IEEEbiographynophoto}{Denis Trystram}
+Biography text here.
+\end{IEEEbiographynophoto}
+
 \end{document}
