--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -90,13 +90,16 @@
 \IEEEauthorblockN{J\'er\^ome Lelong}\\
 \IEEEauthorblockA{Univ. Grenoble Alpes, Inria, CNRS, Grenoble INP, LJK\\
 jerome.lelong@imag.fr}  \\
-\IEEEauthorblockN{Valentin Reis, Denis Trystram}\\
+\IEEEauthorblockN{Valentin Reis}\\
+\IEEEauthorblockA{Univ. Grenoble Alpes, Inria, CNRS, Grenoble INP, LIG\\
+valentin.reis@imag.fr}\\
+\IEEEauthorblockN{Denis Trystram,~\IEEEmembership{Senior Member,~IEEE,}}\\
 \IEEEauthorblockA{Univ. Grenoble Alpes, Inria, CNRS, Grenoble INP, LIG\\
 denis.trystram@imag.fr}
 }
 \begin{document}
 
-\IEEEtitleabstractindextext{D.4.7.f Parallel Systems, D.4.1.e Scheduling, 1.2.6 Learning}
+\IEEEtitleabstractindextext{D.4.7.f Parallel Systems, D.4.1.e Scheduling, I.2.6 Learning}
 
 \begin{abstract}
 
@@ -1348,23 +1351,47 @@ the French program Investissement d'avenir.
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
 
-\begin{IEEEbiographynophoto}{Eric Gaussier}
-Biography text here.
-\end{IEEEbiographynophoto}
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{figures/eric}}]{Eric Gaussier}
+Prof. Eric Gaussier is known for his work on the intersection of Artificial
+Intelligence (AI) and Data Science (DS), in particular for his contributions on
+models and alogrithms to extract information, insights and knowledge from
+texts. He has worked on three main subfields of AI and DS: machine learning,
+information retrieval and computational linguistics. He is also interested in
+modeling how textual information is shared in social content networks, and how
+such networks evolve over time. More recently, he has also been working on
+improving job scheduling techniques through machine learning, and in learning
+representations for different types of sequences, as texts and time series. He
+currently is Director of the Laboratory of Informatics in Grenoble (LIG).
+\end{IEEEbiography}
 
-\begin{IEEEbiographynophoto}{J\'er\^ome Lelong}
-Biography text here.
-\end{IEEEbiographynophoto}
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{figures/jerome}}]{J\'er\^ome Lelong}
+Jérôme Lelong is an associate professor at Grenoble Institute of Technology and
+member of the LJK laboratory. Since 2011, he has been the head of the master
+program on financial engineering. He is a specialist of stochastic
+optimization and HPC algorithms for learning. He has studied many application
+going from quantitative finance to rare event simulation for electronic
+circuit design.
+\end{IEEEbiography}
 
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{figures/valentin}}]{Valentin Reis}
+Valentin is a PhD candidate at Inria/University Grenoble Alpes, France.  He is
+currently working on using learning to improve scheduling processes in
+high performance computing. He is broadly interested in machine learning and
+functionnal programming.
+\end{IEEEbiography}
 
-\begin{IEEEbiographynophoto}{Valentin Reis}
-Valentin is a PhD candidate at Inria/University Grenoble Alpes, France.
-He is broadly interested in machine learning and functionnal programming.
-\end{IEEEbiographynophoto}
-
-
-\begin{IEEEbiographynophoto}{Denis Trystram}
-Biography text here.
-\end{IEEEbiographynophoto}
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{figures/denis}}]{Denis Trystram}
+Denis Trystram is distinguished professor in the institute of technology of
+Univ. Grenoble-Alpes. He is an honorary member of the prestigious Institut
+Universitaire de France. He was vice-director of the LIG in Grenoble for 2
+years (2014-2015) where he is leading a research group on resource management
+for parallel and distributed systems in a joint team with Inria. Since 2010, he
+is director of the international Master program in Computer Science at Univ.
+Grenoble-Alpes. He is a well-known specialist of scheduling in the broad
+variety of parallel and distributed platforms (including HPC clusters, clouds,
+Internet of Things) and multi-objective optimization (in particular with a
+focus on energy). Currently, he is interested in learning and its link with
+resource management.
+\end{IEEEbiography}
 
 \end{document}
